--- a/notebooks/teleoperation/teleoperation.ipynb
+++ b/notebooks/teleoperation/teleoperation.ipynb
@@ -74,8 +74,8 @@
     "\n",
     "robot = Robot()\n",
     "\n",
-    "left_link = traitlets.dlink((controller.axes[1], 'value'), (robot.left_motor, 'value'), transform=lambda x: -x)\n",
-    "right_link = traitlets.dlink((controller.axes[3], 'value'), (robot.right_motor, 'value'), transform=lambda x: -x)"
+    "# left_link = traitlets.dlink((controller.axes[1], 'value'), (robot.left_motor, 'value'), transform=lambda x: -x)\n",
+    "# right_link = traitlets.dlink((controller.axes[3], 'value'), (robot.right_motor, 'value'), transform=lambda x: -x)"
    ]
   },
   {
@@ -154,8 +154,52 @@
    "outputs": [],
    "source": [
     "from jetbot import bgr8_to_jpeg\n",
+    "import time\n",
     "\n",
-    "camera_link = traitlets.dlink((camera, 'value'), (image, 'value'), transform=bgr8_to_jpeg)"
+    "camera_link = traitlets.dlink((camera, 'value'), (image, 'value'), transform=bgr8_to_jpeg)\n",
+    "\n",
+    "# create buttons\n",
+    "button_layout = widgets.Layout(width='100px', height='80px', align_self='center')\n",
+    "stop_button = widgets.Button(description='stop', button_style='danger', layout=button_layout)\n",
+    "forward_button = widgets.Button(description='forward', layout=button_layout)\n",
+    "backward_button = widgets.Button(description='backward', layout=button_layout)\n",
+    "left_button = widgets.Button(description='left', layout=button_layout)\n",
+    "right_button = widgets.Button(description='right', layout=button_layout)\n",
+    "\n",
+    "# display buttons\n",
+    "middle_box = widgets.HBox([left_button, stop_button, right_button], layout=widgets.Layout(align_self='center'))\n",
+    "controls_box = widgets.VBox([forward_button, middle_box, backward_button])\n",
+    "display(controls_box)\n",
+    "\n",
+    "def stop(change):\n",
+    "    robot.stop()\n",
+    "    \n",
+    "def step_forward(change):\n",
+    "    robot.forward(0.4)\n",
+    "    time.sleep(0.5)\n",
+    "    robot.stop()\n",
+    "\n",
+    "def step_backward(change):\n",
+    "    robot.backward(0.4)\n",
+    "    time.sleep(0.5)\n",
+    "    robot.stop()\n",
+    "\n",
+    "def step_left(change):\n",
+    "    robot.left(0.3)\n",
+    "    time.sleep(0.5)\n",
+    "    robot.stop()\n",
+    "\n",
+    "def step_right(change):\n",
+    "    robot.right(0.3)\n",
+    "    time.sleep(0.5)\n",
+    "    robot.stop()\n",
+    "\n",
+    "# link buttons to actions\n",
+    "stop_button.on_click(stop)\n",
+    "forward_button.on_click(step_forward)\n",
+    "backward_button.on_click(step_backward)\n",
+    "left_button.on_click(step_left)\n",
+    "right_button.on_click(step_right)"
    ]
   },
   {
